@@ -1,5 +1,8 @@
 Revision history for DBIx::Class
 
+        - Moved get_simple and set_simple into AccessorGroup
+        - Made 'new' die if given invalid columns
+
 0.03004
         - Added an || '' to the CDBICompat stringify to avoid null warnings
 	- Updated name section for manual pods
